# regime-process

./: .gitignore  CMakeLists.txt  README.md  build.sh  download_vix_data.py  requirements.txt
data/: long_vix_data.csv  vix_data.csv
python/: calibration.py  particle_filter.py  pricing.py  pricing_test.ipynb  regime_viz.ipynb
src/: MonteCarloEngine.cpp  MonteCarloEngine.hpp  RegimeProcess.cpp  RegimeProcess.hpp  bindings.cpp
